# AtCoder4Rust

./: Cargo.toml  README.md
src/: error.rs  generator.rs  main.rs
