[package]
name = "atcoder-generator"
version = "0.0.0"
authors = ["kbone <kbonehobby@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
reqwest = {version = "0.10.4", features = ["cookies"]}
url = "2.1.1"
tokio = {version = "0.2.17", features = ["full"]}
