[package]
name = "atcoder4rust"
version = "0.6.1"
authors = ["kbone <kbonehobby@gmail.com>"]
edition = "2018"
description = "Template generator for solving AtCoder contests in Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
futures = "0.3.4"
percent-encoding = "2.1.0"
reqwest = {version = "0.10.4", features = ["cookies"]}
scraper = "0.11.0"
url = "2.1.1"
tokio = {version = "0.2.17", features = ["full"]}
